tooling/nargo_cli/tests/snapshots/execution_failure/regression_databus_out_of_bounds/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds, array has size 4, but index was 7
  ┌─ src/main.nr:7:5
  │
7 │     y[i]
  │     ----
  │
  = Call stack:
    1: main
            at src/main.nr:7:5

Failed to solve program: 'Index out of bounds, array has size 4, but index was 7'
