tooling/nargo_cli/tests/snapshots/execution_failure/regression_databus_out_of_bounds/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:7:5
  │
7 │     y[i]
  │     ----
  │
  = Call stack:
    1. src/main.nr:7:5

Failed assertion
