tooling/nargo_cli/tests/snapshots/execution_failure/regression_databus_out_of_bounds/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 7 is out of bounds for the array of length 4
  ┌─ src/main.nr:7:5
  │
7 │     y[i]
  │     ----
  │

Error interpreting main function
